kubernetes/manifest/frontend/cvelabhub_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cvelabhub-frontend-svc
  namespace: default
spec:
  type: NodePort
  selector:
    app: cvelabhub-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
