kubernetes/manifest/frontend/cvelabhub_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cvelabhub-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"   # 또는 아예 삭제해도 됨
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # === 백엔드 라우팅: /api 로 시작하는 모든 요청 ===
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cvelabhub-app-svc
                port:
                  number: 8082

          # === 프론트엔드 라우팅: 나머지 전부 ===
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvelabhub-frontend-svc
                port:
                  number: 3000
